--- a/SwimCoach/View/Base.lproj/Main.storyboard
+++ b/SwimCoach/View/Base.lproj/Main.storyboard
@@ -98,14 +98,14 @@
                                 </connections>
                             </button>
                             <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="White bubble" translatesAutoresizingMaskIntoConstraints="NO" id="Cy9-gp-toD">
-                                <rect key="frame" x="262.66666666666669" y="44.000000000000007" width="112.33333333333343" height="121.66666666666669"/>
+                                <rect key="frame" x="262.66666666666669" y="44.000000000000007" width="112.33333333333331" height="121.66666666666669"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="White bubble" translatesAutoresizingMaskIntoConstraints="NO" id="tuh-fI-wuy">
-                                <rect key="frame" x="0.0" y="696.66666666666663" width="75.000000000000114" height="81.333333333333371"/>
+                                <rect key="frame" x="0.0" y="696.66666666666663" width="75" height="81.333333333333371"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="White bubble" translatesAutoresizingMaskIntoConstraints="NO" id="AyR-GD-QUi">
-                                <rect key="frame" x="165" y="653.33333333333337" width="45.000000000000114" height="40.666666666666629"/>
+                                <rect key="frame" x="165" y="653.33333333333337" width="45" height="40.666666666666629"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -143,7 +143,7 @@
                         <outlet property="email" destination="1eS-3Q-NrI" id="qlO-1d-XJt"/>
                         <outlet property="login" destination="4f8-ra-NHq" id="Sm2-oI-eXt"/>
                         <outlet property="password" destination="Egy-fe-pKh" id="5Hl-ce-Qfc"/>
-                        <segue destination="bXg-ni-pBe" kind="presentation" identifier="homeScreenSegue" id="pRa-nZ-YBT"/>
+                        <segue destination="k8W-di-a9v" kind="presentation" identifier="homeScreenSegue" modalPresentationStyle="fullScreen" id="fTP-56-R6L"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -262,47 +262,66 @@
                         <outlet property="email" destination="3q9-Rb-hBQ" id="O8X-m1-iUv"/>
                         <outlet property="password" destination="RoP-lL-tsU" id="BcS-bT-YF8"/>
                         <outlet property="username" destination="f5o-y7-B4K" id="fDY-Ni-8de"/>
-                        <segue destination="bXg-ni-pBe" kind="presentation" identifier="homeScreenSegue" id="VLg-le-hSn"/>
+                        <segue destination="k8W-di-a9v" kind="presentation" identifier="homeScreenSegue" modalPresentationStyle="fullScreen" id="3LO-PM-gz6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jRO-Um-Uoz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="138" y="862"/>
         </scene>
-        <!--Group-->
-        <scene sceneID="QNc-ay-ssC">
+        <!--Tab Bar Controller-->
+        <scene sceneID="lik-TO-a7b">
             <objects>
-                <navigationController modalPresentationStyle="fullScreen" id="bXg-ni-pBe" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Group" image="person.3" catalog="system" id="IFg-we-kES"/>
-                    <navigationItem key="navigationItem" id="D6V-QF-rDi"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="Ngc-QB-e9o">
+                <tabBarController id="k8W-di-a9v" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" backgroundImage="transparent" id="iqy-N4-Vjd">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="rV4-E2-N0Q" kind="relationship" relationship="viewControllers" id="kvN-rR-YgS"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ase-hH-flU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1084" y="297"/>
+        </scene>
+        <!--Group-->
+        <scene sceneID="uEA-Rw-4US">
+            <objects>
+                <navigationController id="rV4-E2-N0Q" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Group" image="person.3" catalog="system" id="T98-fI-Wc9"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QQK-te-Eg5">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
-                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="x0p-Kn-Q7D">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </toolbar>
                     <connections>
-                        <segue destination="xaQ-HS-j1N" kind="relationship" relationship="rootViewController" id="fOH-JP-QmB"/>
+                        <segue destination="xaQ-HS-j1N" kind="relationship" relationship="rootViewController" id="tMc-lR-Fqj"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5bw-oX-PAe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mWP-9B-Ceg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1233" y="394"/>
+            <point key="canvasLocation" x="2086" y="-214"/>
         </scene>
         <!--Group-->
         <scene sceneID="ben-V2-Lpt">
             <objects>
-                <viewController id="xaQ-HS-j1N" customClass="HomeScreenController" customModule="SwimCoach" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="xaQ-HS-j1N" customClass="GroupController" customModule="SwimCoach" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FwI-JP-OIg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CEe-eq-uLy">
-                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="641"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JJb-jF-oyF">
                                     <size key="itemSize" width="180" height="180"/>
@@ -344,7 +363,7 @@
                                         <connections>
                                             <outlet property="folderImage" destination="FLS-eS-OLo" id="9eA-9i-cXE"/>
                                             <outlet property="groupeName" destination="LDv-qi-UQ1" id="ZJR-Nw-UEk"/>
-                                            <segue destination="YiC-u6-Zzb" kind="show" identifier="presenceSegue" id="TiD-by-wGp"/>
+                                            <segue destination="KFZ-qh-hii" kind="show" identifier="presenceSegue" id="cLF-3Y-KbX"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -366,8 +385,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2LV-wr-pXa"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Group" id="gpk-sn-muT">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="3AM-Yh-ZRX">
+                    <navigationItem key="navigationItem" title="Group" largeTitleDisplayMode="always" id="gpk-sn-muT">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="folder.badge.plus" catalog="system" id="3AM-Yh-ZRX">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="addGroup" destination="xaQ-HS-j1N" id="5LR-jH-tgC"/>
                             </connections>
@@ -380,90 +400,38 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VXo-xI-COE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2401" y="394"/>
+            <point key="canvasLocation" x="2938" y="-214"/>
         </scene>
-        <!--Item 2-->
-        <scene sceneID="R1Y-We-h4D">
+        <!--Presence Controller-->
+        <scene sceneID="xe2-RY-EhH">
             <objects>
-                <viewController id="vh5-dn-IWK" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="p95-Ys-DxV">
+                <viewController id="KFZ-qh-hii" customClass="PresenceController" customModule="SwimCoach" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1rC-Be-MZo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="ojD-3V-Lrg"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="k6S-kU-clu"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="LUv-QS-28B"/>
+                    <navigationItem key="navigationItem" id="4ca-eV-cFV">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="person.badge.plus" catalog="system" id="SyB-Fk-po9">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NTy-H1-wgD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="72i-RD-BlV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4244" y="726"/>
-        </scene>
-        <!--Presence-->
-        <scene sceneID="AIc-E4-5Zu">
-            <objects>
-                <navigationController id="qMm-ja-Jo2" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Presence" image="person.3" catalog="system" id="21Z-23-j8a"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8hR-Iq-JLg">
-                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </textAttributes>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="T4p-xM-xpo" kind="relationship" relationship="rootViewController" id="hiI-c4-LDs"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dsB-iE-HQR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="4244" y="-70"/>
-        </scene>
-        <!--Presence-->
-        <scene sceneID="ZaS-HB-46j">
-            <objects>
-                <viewController id="T4p-xM-xpo" customClass="PresenceController" customModule="SwimCoach" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="lqE-ar-7Hl">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="a6Z-dU-m4r"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Presence" id="pFD-Ue-HgC"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rGr-Nu-ZB0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="5074" y="-70"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="xW3-Hy-Klk">
-            <objects>
-                <tabBarController id="YiC-u6-Zzb" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="fjv-Yk-caZ"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" backgroundImage="transparent" id="YO3-Vb-V8I">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="qMm-ja-Jo2" kind="relationship" relationship="viewControllers" id="O4z-qx-DlV"/>
-                        <segue destination="vh5-dn-IWK" kind="relationship" relationship="viewControllers" id="fPP-gr-Yes"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pQb-av-eoZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3297" y="394"/>
+            <point key="canvasLocation" x="3871" y="-214"/>
         </scene>
     </scenes>
     <resources>
         <image name="White bubble" width="474" height="512"/>
         <image name="folder" catalog="system" width="64" height="46"/>
+        <image name="folder.badge.plus" catalog="system" width="64" height="42"/>
         <image name="person.3" catalog="system" width="72" height="35"/>
+        <image name="person.badge.plus" catalog="system" width="64" height="58"/>
         <image name="transparent" width="0.5" height="0.5"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="VLg-le-hSn"/>
+        <segue reference="fTP-56-R6L"/>
     </inferredMetricsTieBreakers>
 </document>
